Check that convert_text() succeeded

validate_and_insert() does not allow its `buffer` parameter to be NULL.
In gedit_document_output_stream_flush(), if convert_text() fails, then
`outbuf` will be NULL and validate_and_insert() will be called with a
NULL `buffer`.

https://bugzilla.gnome.org/show_bug.cgi?id=669909